--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="야단법석 : 2023 가을축제" />
+    <meta property="og:url" content="http://dgu-yadan.site" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/yadanogimg.png" />
+    <meta
+      property="og:description"
+      content="2023 동국대학교 가을 축제 : 야단법석 사이트"
+    />
     <title>야단법석 : 2023 가을축제</title>
     <!-- Google tag (gtag.js) -->
     <script
@@ -19,7 +27,7 @@
 
       gtag("config", "G-C6LEE54PVW");
     </script>
-    <!-- google font -->
+    <!— google font —>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
