--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       gtag("config", "G-C6LEE54PVW");
     </script>
-    <!— google font —>
+    <!-- google font -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
