🎨Feat: og 이미지 변경

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="야단법석 : 2023 가을축제" />
     <meta property="og:url" content="http://dgu-yadan.site" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/yadanogimg.png" />
+    <meta property="og:image" content="/ogimg.png" />
     <meta
       property="og:description"
       content="2023 동국대학교 가을 축제 : 야단법석 사이트"
